# saca-benchmark

./: .gitignore  CMakeLists.txt  README.md
benchmark/: run_benchmark.sh  run_saca.py
corpora/: manzini.info  pizza-chili-repetitive.info
results/: manzini.csv  pizza-chili-corpus.csv
src/: CMakeLists.txt  difsufsort_saca.cpp  divsufsort_saca.cpp  sais_nong_saca.cpp  sais_yuta_saca.cpp
